fix: null 체크 추가